--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">SarAndroidFunctions</string>
+    <string name="title_activity_audio_record">AudioRecordActivity</string>
+    <string name="title_activity_audio_play">AudioPlayActivity</string>
 </resources>
